<?xml version="1.0"?>
<package format="3">
  <name>ellipsoid_msgs</name>
  <version>0.0.1</version>
  <description>ROS 2 package for ellipsoid obstacle messages</description>
  <author email="spiasecki@student.ethz.ch">Stanislaw Piasecki</author>
  <maintainer email="spiasecki@student.ethz.ch">Stanislaw Piasecki</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
