<?xml version="1.0"?>
<package format="3">
  <name>dynablox</name>
  <version>0.0.1</version>
  <description>Detecting arbitrary moving objects in compelx environments</description>

  <author email="schmluk@ethz.ch">Lukas Schmid</author>
  <author email="asulser@ethz.ch">Aurelio Sulser</author>
  <author email="olov.andersson@ethz.ch">Olov Andersson</author>

  <maintainer email="schmluk@ethz.ch">Lukas Schmid</maintainer>
  <maintainer email="asulser@ethz.ch">Aurelio Sulser</maintainer>
  <maintainer email="olov.andersson@ethz.ch">Olov Andersson</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>voxblox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
