<?xml version="1.0"?>
<package format="3">
  <name>dynablox_ros</name>
  <version>0.0.0</version>
  <description>Detecting diverse dynamic objects in complex environments</description>

  <author email="schmluk@ethz.ch">Lukas Schmid</author>
  <author email="asulser@ethz.ch">Aurelio Sulser</author>
  <author email="olov.andersson@ethz.ch">Olov Andersson</author>

  <maintainer email="schmluk@ethz.ch">Lukas Schmid</maintainer>
  <maintainer email="asulser@ethz.ch">Aurelio Sulser</maintainer>
  <maintainer email="olov.andersson@ethz.ch">Olov Andersson</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>dynablox</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
