<?xml version="1.0"?>
<package format="3">
  <name>voxblox_ros</name>
  <version>0.0.0</version>
  <description>Voxblox ROS2 interface</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>minkindr</depend>
  <depend>glog</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
